# VeritasAI

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy-contract.yml  pr-checks.yml
contracts/: Cargo.toml  README.md  build.sh  deploy.sh
contracts/src/: lib.rs
frontend/: .prettierignore  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dataset/[id]/: page.tsx
frontend/src/app/marketplace/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: DatasetCard.tsx  Navbar.tsx  UploadForm.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/lib/: biovalidation.ts  near.ts  pinata.ts  utils.ts  zkproofs.ts
