[package]
name = "veritasai_contract"
version = "0.1.0"
edition = "2021"
authors = ["VeritasAI Team"]

[dependencies]
near-sdk = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
